--- a/content/resources/21w-777s17.md
+++ b/content/resources/21w-777s17.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21w-777-science-writing-in-contemporary-society-spring-2017/55f5f0cdf973c8dac8f2d7c09f21a0bf_21W-777s17.jpg
+file: /media/courses/21w-777-science-writing-in-contemporary-society-spring-2017/55f5f0cdf973c8dac8f2d7c09f21a0bf_21W-777s17.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Renowned surgeon and science writer Atul Gawande speaking at TED2017. Gawande's
@@ -11,6 +11,8 @@ image_metadata:
   credit: ''
   image-alt: A photo of Atul Gawande, who is a well known surgeon and science writer,
     speaking at a TED conference.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 21W-777s17
 uid: 55f5f0cd-f973-c8da-c8f2-d7c09f21a0bf
