--- a/content/resources/21w-777s17.md
+++ b/content/resources/21w-777s17.md
@@ -12,6 +12,7 @@ image_metadata:
   image-alt: A photo of Atul Gawande, who is a well known surgeon and science writer,
     speaking at a TED conference.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 21W-777s17
