Sync all content

--- a/content/resources/21w-777s17-th.md
+++ b/content/resources/21w-777s17-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21w-777-science-writing-in-contemporary-society-spring-2017/ada93215e8e60b2c04368ef32619ac87_21W-777s17-th.jpg
+file_size: 5193
 file_type: image/jpeg
 image_metadata:
   caption: Renowned surgeon and science writer Atul Gawande speaking at TED2017. Gawande's
