--- a/content/resources/21w-777s17.md
+++ b/content/resources/21w-777s17.md
@@ -7,8 +7,9 @@ file_type: image/jpeg
 image_metadata:
   caption: Renowned surgeon and science writer Atul Gawande speaking at TED2017. Gawande's
     writings have appeared in _The New Yorker_ and _Slate_, and he has written numerous
-    books on medicine and public health. (Image courtesy of the [TED Conference](https://flic.kr/p/TCY1fo)
-    on flickr. License CC BY-NC.)
+    books on medicine and public health. (Image courtesy of the {{% resource_link
+    "51ed0fab-d37e-4124-86f5-feca3d2fa878" "TED Conference" %}} on flickr. License
+    CC BY-NC.)
   credit: ''
   image-alt: A photo of Atul Gawande, who is a well known surgeon and science writer,
     speaking at a TED conference.
